Bug 438335 CopyRequest not cleared when local folder is moved. p=Siddharth Agarwal <sid1337@gmail.com>,r/sr=bienvenu